fix bounce on mobile device

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   padding: 0;
   height: 100%;
   font-family: sans-serif;
+  overflow: hidden;
 }
 
 div {
@@ -21,11 +22,13 @@ div {
 
 .App {
   height: 100%;
+  width: 100%;
   background-color: #495057;
 }
 
 .App-header {
-  padding: 40px;
+  padding: 40px 0;
+  width: 280px;
   margin: auto;
   color: #f1f3f5;
 }
@@ -44,6 +47,6 @@ div {
 }
 
 .game-area {
-  margin: 30px auto 20px;
+  margin: 10px auto 20px;
   width: 280px;
 }
